# action-validator

./: Cargo.toml  action.yml  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
src/: config.rs  schemas.rs
