[package]
name = "action-validator"
version = "0.0.0-git"
authors = ["Matt Palmer <matt@hezmatt.org>"]
edition = "2021"
build = "build.rs"

[dependencies]
glob = "0.3"
clap = { version = "4.1", features = ["derive", "color"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
valico = "3.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
split-debuginfo = "off"
debug = false
